hopefully fix last entry being too tall

--- a/nfc-site/styles.css
+++ b/nfc-site/styles.css
@@ -16,7 +16,7 @@ html {
 #student-info {
     padding-top: 10px;
     white-space: pre;
-    margin: 0px -30px 0px -30px;
+    margin: 0px -30px -15px -30px;
 }
 
 .user-entry {
